tests/pass/check/imported_global_namespace/main.kira
import UI as Kit

@Kit.Doc("Qualified imported annotation")
Widget DashboardShell() {
    content {
        Card("Global")
        Kit.Card("Qualified")
    }

    onAppear() {
        return;
    }
}

@Main
function entry() {
    return;
}
