tests/fail/semantics/undeclared_construct_annotation/main.kira
construct Widget {
    annotations {
        @State;
    }
}

@Main
function entry() {
    return;
}
